Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1284,7 +1284,7 @@ O construtor do OrderManager recebe 2 parâmetros:
 
 Com este método – Bind –, é possível vincular o contexto da aplicação ao SDK. Este serviço é responsável por gerenciar as funções relacionadas com as ordens da LIO
 
-```
+```json
     ServiceBindListener serviceBindListener = new ServiceBindListener() {
     
         @Override public void onServiceBoundError(Throwable throwable) {
@@ -1344,7 +1344,7 @@ Iniciar processo de pagamento
 
 Este método permite iniciar o processo de pagamento na Cielo LIO.
 
-```
+```json
     PaymentListener paymentListener = new PaymentListener() {
         @Override
         public void onStart() {
