Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1284,27 +1284,16 @@ O construtor do OrderManager recebe 2 parâmetros:
 
 Com este método – Bind –, é possível vincular o contexto da aplicação ao SDK. Este serviço é responsável por gerenciar as funções relacionadas com as ordens da LIO
 
-```json
-    ServiceBindListener serviceBindListener = new ServiceBindListener() {
-    
-        @Override public void onServiceBoundError(Throwable throwable) {
-            //Ocorreu um erro ao tentar se conectar com o serviço OrderManager
-        }
-        
-        @Override
-        public void onServiceBound() {
-            //Você deve garantir que sua aplicação se conectou com a LIO a partir desse listener
-            //A partir desse momento você pode utilizar as funções do OrderManager, 
-            //caso contrário uma exceção será lançada.
-        } 
-    
-        @Override
-        public void onServiceUnbound() {
-            // O serviço foi desvinculado
-        }
-    }; 
-    
-    orderManager.bind(contextActivity, serviceBindListener);
+```
+{
+    "id": "f9a9e3c0d31445f7ac419642651f0a52",
+    "order_id": "ede8f84a8b8645cb8e576a593c25c6ed",
+    "type": "STATUS_CHANGED",
+    "status": {
+        "old": "ENTERED",
+        "new_status": "PAID"
+    }
+}
 ```
 
 >**Atenção:** Você deve garantir que o listener `onServiceBound()` foi chamado antes de utilizar as funções do OrderManager, caso contrário uma exceção será lançada e causará um crash na sua aplicação.
@@ -1331,6 +1320,18 @@ Este método permite que sejam adicionados itens em um pedido.
 
 > **Atenção:** É necessário adicionar no mínimo um item a um pedido para que seja possível dar continuidade ao pagamento.
 
+```
+{
+    "id": "f9a9e3c0d31445f7ac419642651f0a52",
+    "order_id": "ede8f84a8b8645cb8e576a593c25c6ed",
+    "type": "STATUS_CHANGED",
+    "status": {
+        "old": "ENTERED",
+        "new_status": "PAID"
+    }
+}
+```
+
 #### Liberar pedido para pagamento
 
 Este método permite atualizar o status de um pedido e liberá-lo para pagamento. O objetivo é utilizar este método depois de adicionar todos os itens no pedido.
@@ -1344,28 +1345,16 @@ Iniciar processo de pagamento
 
 Este método permite iniciar o processo de pagamento na Cielo LIO.
 
-```json
-    PaymentListener paymentListener = new PaymentListener() {
-        @Override
-        public void onStart() {
-            Log.d("MinhaApp", "O pagamento começou.");
-        }
-        
-        @Override
-        public void onPayment(@NotNull Order order) {
-            Log.d("MinhaApp", "Um pagamento foi realizado.");
-        } 
-                
-        @Override public void onCancel() {
-            Log.d("MinhaApp", "A operação foi cancelada.");
-        } 
-                
-        @Override public void onError(@NotNull PaymentError paymentError) {
-            Log.d("MinhaApp", "Houve um erro no pagamento.");
-        }     
-    }; 
-    
-    orderManager.checkoutOrder(order.getId(), order.getPrice(), paymentListener);
+```
+{
+    "id": "f9a9e3c0d31445f7ac419642651f0a52",
+    "order_id": "ede8f84a8b8645cb8e576a593c25c6ed",
+    "type": "STATUS_CHANGED",
+    "status": {
+        "old": "ENTERED",
+        "new_status": "PAID"
+    }
+}
 ```
 
 ## Processo de Pagamento
