Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1238,16 +1238,20 @@ Após configurar um novo projeto no Android Studio, é necessário incluir a dep
 
 Para a versão release, adicione o módulo do Cielo LIO Order Manager SDK nas dependências do Gradle:
 
-```compile 'com.cielo.lio:order-manager:0.17.7-beta```
+```
+compile 'com.cielo.lio:order-manager:0.17.7-beta
+```
 
 > A partir da versão 1.17.7-beta do SDK se tornou necessária a permissão de INTERNET na aplicação cliente.
-Adicione ao `AndroidManifest.xml` da sua aplicação: ` <uses-permission android:name="android.permission.INTERNET"/> `
+Adicione essa permissão ao `AndroidManifest.xml` da sua aplicação.
 
 ### Credenciais
 
 Para utilizar o Cielo LIO Order Manager SDK, é necessário inserir as seguintes credenciais na inicialização do OrderManager:
 
-``` Credentials credentials = new Credentials(<<Seu client id aqui>>", "<<Seu accessToken aqui>>"); ```
+```
+Credentials credentials = new Credentials("Seu client id aqui", "Seu accessToken aqui");
+```
 
 * Client-Id
 Identificação de acesso. Sua geração ocorre no momento da criação pelo painel do desenvolvedor. Seu valor pode ser visualizado na coluna Client ID, dentro do menu 'Desenvolvedor' -> 'Client ID Cadastrados'.
@@ -1269,7 +1273,9 @@ Este método permite iniciar o OrderManager, que é responsável pelas principai
 
 Tudo começa com a criação do OrderManager!
 
-```OrderManager orderManager = new OrderManager(credentials, context);```
+```
+    OrderManager orderManager = new OrderManager(credentials, context);
+```
 
 O construtor do OrderManager recebe 2 parâmetros:
 
@@ -1300,7 +1306,9 @@ A Cielo LIO trabalha com o conceito de Order (pedido). É necessário possuir um
 
 Este método permite criar uma Order (classe Order). Para realizar essa criação, utilize o método createDraftOrder, que disponibilizará uma Order com status DRAFT:
 
-```Order order = orderManager.createDraftOrder("REFERÊNCIA_DO_PEDIDO");```
+```
+    Order order = orderManager.createDraftOrder("REFERÊNCIA_DO_PEDIDO");
+```
 
 #### Adicionar itens em um pedido
 
@@ -1312,7 +1320,9 @@ Este método permite que sejam adicionados itens em um pedido.
 
 Este método permite atualizar o status de um pedido e liberá-lo para pagamento. O objetivo é utilizar este método depois de adicionar todos os itens no pedido.
 
-``` orderManager.placeOrder(order); ```
+``` 
+    orderManager.placeOrder(order);
+```
 
 Após a execução desse método, o status da Order irá trocar de DRAFT para ENTERED, permitindo que a mesma seja paga.
 
