Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1188,6 +1188,8 @@ Exemplo de informação enviada pelo Order Manager
 |---|---|---|---|
 |[![android](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/01-sdk-android.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Android)| [![C#](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/03-sdk-csharp.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-CSHARP)  | [![android](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/04-sdk-java.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-Java)  |  [![android](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/07-sdk-php.png)](https://github.com/DeveloperCielo/LIO-SDK-API-Integracao-Remota-v1-PHP) |
 
+---
+
 # Integração Local
 
 ## Apresentação
@@ -1274,7 +1276,7 @@ Este método permite iniciar o OrderManager, que é responsável pelas principai
 Tudo começa com a criação do OrderManager!
 
 ```
-    OrderManager orderManager = new OrderManager(credentials, context);
+OrderManager orderManager = new OrderManager(credentials, context);
 ```
 
 O construtor do OrderManager recebe 2 parâmetros:
@@ -1288,15 +1290,37 @@ O construtor do OrderManager recebe 2 parâmetros:
 
 #### Vincular o contexto da aplicação ao SDK
 
-Com este método – Bind –, é possível vincular o contexto da aplicação ao SDK. Este serviço é responsável por gerenciar as funções relacionadas com as ordens da LIO
+Com o método `bind()`, é possível vincular o contexto da aplicação ao SDK. Este serviço é responsável por gerenciar as funções relacionadas com as ordens da LIO
+
+```
+ServiceBindListener serviceBindListener = new ServiceBindListener() {
+
+    @Override public void onServiceBoundError(Throwable throwable) {
+        //Ocorreu um erro ao tentar se conectar com o serviço OrderManager
+    }
+
+    @Override
+    public void onServiceBound() {
+        //Você deve garantir que sua aplicação se conectou com a LIO a partir desse listener
+        //A partir desse momento você pode utilizar as funções do OrderManager, caso contrário uma exceção será lançada.
+    }
+
+    @Override
+    public void onServiceUnbound() {
+        // O serviço foi desvinculado
+    }
+};
+
+orderManager.bind(context, serviceBindListener);
+```
 
 >**Atenção:** Você deve garantir que o listener `onServiceBound()` foi chamado antes de utilizar as funções do OrderManager, caso contrário uma exceção será lançada e causará um crash na sua aplicação.
 
 O método Bind recebe dois parâmetros:
 
-* **contextActivity:** Activity que proverá o contexto a que o serviço será vinculado.
+* **context:** objeto que proverá o contexto em que o serviço será vinculado.
 
-* **serviceBindListener:** Listener que notifica se o serviço foi vinculado ou não.
+* **serviceBindListener:** listener que notifica o estado da conexão com o serviço OrderManager.
 
 Com o OrderManager inicializado e após a execução do método onServiceBound, se torna possível ir para a próxima etapa e criar um pedido (classe Order).
 
@@ -1307,7 +1331,7 @@ A Cielo LIO trabalha com o conceito de Order (pedido). É necessário possuir um
 Este método permite criar uma Order (classe Order). Para realizar essa criação, utilize o método createDraftOrder, que disponibilizará uma Order com status DRAFT:
 
 ```
-    Order order = orderManager.createDraftOrder("REFERÊNCIA_DO_PEDIDO");
+Order order = orderManager.createDraftOrder("REFERÊNCIA_DO_PEDIDO");
 ```
 
 #### Adicionar itens em um pedido
@@ -1316,12 +1340,27 @@ Este método permite que sejam adicionados itens em um pedido.
 
 > **Atenção:** É necessário adicionar no mínimo um item a um pedido para que seja possível dar continuidade ao pagamento.
 
+```
+// Identificação do produto (Stock Keeping Unit)
+String sku = "2891820317391823";
+String name = "Coca-cola lata";
+
+// Preço unitário em centavos
+int unitPrice = 550;
+int quantity = 3;
+
+// Unidade de medida do produto String
+unityOfMeasure = "UNIDADE";
+
+order.addItem(sku, name, unitPrice, quantity, unityOfMeasure);
+```
+
 #### Liberar pedido para pagamento
 
 Este método permite atualizar o status de um pedido e liberá-lo para pagamento. O objetivo é utilizar este método depois de adicionar todos os itens no pedido.
 
 ``` 
-    orderManager.placeOrder(order);
+orderManager.placeOrder(order);
 ```
 
 Após a execução desse método, o status da Order irá trocar de DRAFT para ENTERED, permitindo que a mesma seja paga.
@@ -1337,16 +1376,46 @@ Existem 4 formas diferentes de chamar o método checkoutOrder:
 
 ![checkoutorder formas](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/checkoutOrder.jpg)
 
+Independende da forma escolhida, você deverá utilizar o seguinte callback como parâmetro do método de `checkoutOrder()` para receber os estados relacionados ao pagamento.
+
+> PaymentListener: Um callback que informa sobre todas as ações tomadas durante o processo de pagamento. As seguintes ações podem ser notificadas:  * onStart - Quando se dá o início do pagamento. * onPayment - Quando um pagamento é realizado. Notem que um pedido pode ser pago por mais de um * pagamento. * onCancel - Quando o pagamento é cancelado. * onError - Quando acontece um erro no pagamento do pedido.
+
+```
+PaymentListener paymentListener = new PaymentListener() {
+    @Override
+    public void onStart() {
+        Log.d("SDKClient", "O pagamento começou.");
+    }
+
+    @Override
+    public void onPayment(@NotNull Order order) {
+        Log.d("SDKClient", "Um pagamento foi realizado.");
+    }
+
+    @Override public void onCancel() {
+        Log.d("SDKClient", "A operação foi cancelada.");
+    }
+
+    @Override public void onError(@NotNull PaymentError paymentError) {
+        Log.d("SDKClient", "Houve um erro no pagamento.");
+    }
+};
+```
+
 ### 1. Pagamento Parcial
 
 No Pagamento parcial, o valor do pagamento é informado dentro do fluxo de telas da Cielo LIO. Na sequência, o fluxo de pagamento da Cielo LIO é iniciado (inserir o cartão, digitar a senha e visualizar e/ou enviar por e-mail o comprovante).
+
+```
+orderManager.checkoutOrder(order.getId(), order.getPrice(), paymentListener);
+```
 
 Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
 
 | Atributo        | Descrição                                                                                                                                                                                                                                                                                                                                                                                                | Domínio                                 |
 |-----------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------|
 | orderId         | O identificador do pedido a ser pago.                                                                                                                                                                                                                                                                                                                                                                    | String                                  |
-| paymentListener | Um callback que informa sobre todas as ações tomadas durante o processo de pagamento.   As seguintes ações podem ser notificadas:  * onStart - Quando se dá o início do pagamento. * onPayment - Quando um pagamento é realizado. Notem que um pedido pode ser pago por mais de um * pagamento. * onCancel - Quando o pagamento é cancelado. * onError - Quando acontece um erro no pagamento do pedido. | cielo.sdk.order.payment.PaymentListener |
+| paymentListener | Um callback que informa sobre todas as ações tomadas durante o processo de pagamento. | cielo.sdk.order.payment.PaymentListener |
 
 **Fluxo da transação utilizando o pagamento parcial da Cielo LIO**
 
