Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1403,27 +1403,125 @@ PaymentListener paymentListener = new PaymentListener() {
     }
 };
 ```
-
 ### 1. Pagamento Parcial
+No Pagamento parcial, o valor do pagamento é informado dentro do fluxo de telas da Cielo LIO. Na sequência, o fluxo de pagamento da Cielo LIO é iniciado (definir o valor a ser pago, escolher a forma de pagamento, inserir o cartão, digitar a senha e visualizar e/ou enviar por e-mail o comprovante).
 
-No Pagamento parcial, o valor do pagamento é informado dentro do fluxo de telas da Cielo LIO. Na sequência, o fluxo de pagamento da Cielo LIO é iniciado (inserir o cartão, digitar a senha e visualizar e/ou enviar por e-mail o comprovante).
-
-```
-orderManager.checkoutOrder(order.getId(), order.getPrice(), paymentListener);
-```
+```orderManager.checkoutOrder(orderId, paymentListener);```
 
 Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
 
-| Atributo        | Descrição                                                                                                                                                                                                                                                                                                                                                                                                | Domínio                                 |
+| Atributo        | Descrição  | Domínio|
 |-----------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------|
-| orderId         | O identificador do pedido a ser pago.                                                                                                                                                                                                                                                                                                                                                                    | String                                  |
-| paymentListener | Um callback que informa sobre todas as ações tomadas durante o processo de pagamento. | cielo.sdk.order.payment.PaymentListener |
+| orderId         | O identificador do pedido a ser pago. | String   |
+| paymentListener | Callback de pagamento. | cielo.sdk.order.payment.PaymentListener |
 
 **Fluxo da transação utilizando o pagamento parcial da Cielo LIO**
 
 Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parcial:
-
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcial.jpg)
+
+### 2. Pagamento de valor
+No pagamento de Valores, o valor a ser pago é informado pelo aplicativo e a forma de pagamento (crédito, débito, parcelado) é escolhida dentro do fluxo de telas da Cielo LIO.
+
+```orderManager.checkoutOrder(orderId, value, paymentListener);```
+
+Nessa forma de pagamento é possível enviar qualquer valor a ser pago (valor total ou valor parcial do pedido), tudo depende do modelo de negócio adotado pelo aplicativo do parceiro. Para fazer a chamada é necessário enviar os seguintes parâmetros:
+
+| Atributo        | Descrição  | Domínio|
+|-----------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------|
+| orderId         | O identificador do pedido a ser pago. | String   |
+| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | Long   |
+| paymentListener | Callback de pagamento. | cielo.sdk.order.payment.PaymentListener |
+
+**Fluxo da transação utilizando o pagamento de valor da Cielo LIO**
+
+Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento de valor:
+![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-valor.jpg)
+
+### 3. Pagamento direto
+No Pagamento Direto, o valor a ser pago e a forma de pagamento (crédito, débito, parcelado) será definido dentro da aplicação do parceiro. Na sequência o fluxo de pagamento da Cielo LIO é iniciado (inserir o cartão, digitar a senha e visualizar e/ou enviar por e-mail comprovante).
+
+Para realizar o pagamento direto é necessário, primeiramente, verificar os tipos de pagamento habilitados para Cielo LIO do estabelecimento comercial utilizando a função de consulta de formas de pagamentos habilitadas para LIO:
+
+```ArrayList<PrimaryProduct> paymentTypes = orderManager.retrievePaymentType();```
+
+Esta função disponibilizará uma lista de objetos do tipo PrimaryProduct onde será possível recuperar os códigos de pagamento habilitados.
+
+Os seguintes campos serão retornados por essa função:
+
+| Atributo        | Descrição  | Domínio|
+|-----------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------|
+| id         |identificador do código no sistema. | Long   |
+| code         | utilizado na função de pagamento. | String   |
+| name         | Nome do método de pagamento para efeitos de exibição. | String   |
+| secondaryProducts         | Listagem de códigos de pagamento secundário. ex.: À Vista, Parcelado, etc. | ArrayList<SecondaryProduct>   |
+
+Com os códigos de pagamentos disponíveis para a Cielo LIO do estabelecimento comercial, basta realizar a chamada de Pagamento Direto informando os códigos dos produtos:
+
+```
+  PrimaryProduct primaryProduct = paymentTypes.get(0);
+  SecondaryProduct secondaryProduct = primaryProduct.getSecondaryProducts().get(0);
+  String primaryCode = primaryProduct.getCode();
+  String secondaryCode = secondaryProduct.getCode();
+  orderManager.checkoutOrder(orderId, primaryCode, secondaryCode paymentListener);
+```
+
+Nessa forma de pagamento é possível enviar qualquer valor a ser pago e a forma de pagamento. Para fazer a chamada é necessário enviar os seguintes parâmetros:
+
+| Atributo        | Descrição  | Domínio|
+|-----------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------|
+| orderId         | O identificador do pedido a ser pago. | String   |
+| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | Long   |
+| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | String   |
+| secondaryCode         | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | String   |
+| paymentListener | Callback de pagamento. | cielo.sdk.order.payment.PaymentListener |
+
+**Fluxo da transação utilizando o pagamento direto da Cielo LIO**
+
+```orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, paymentListener);```
+
+Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento de valor:
+![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-direto.jpg)
+
+### 4. Pagamento parcelado
+Para efetuar um pagamento parcelado, é preciso consultar as formas de pagamento utilizando a função disponibilizada no SDK, escolher crédito no produto primário e crédito no produto secundário **obrigatoriamente** e informar o número de parcelas no momento do checkout. É importante lembrar que se os códigos de pagamento forem informados incorretamente ou se o número de parcelas não for maior do que **0**, o sistema acusará erro.
+Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
+
+| Atributo        | Descrição  | Domínio|
+|-----------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------|
+| orderId         | O identificador do pedido a ser pago. | String   |
+| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | Long   |
+| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | String   |
+| secondaryCode | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | String   |
+| installments | Número de parcelas. | Long   |
+| paymentListener | Callback de pagamento. | cielo.sdk.order.payment.PaymentListener |
+
+**Fluxo da transação utilizando o pagamento parcelado da Cielo LIO**
+
+```orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, installments,  paymentListener);```
+
+Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parcelado:
+![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
+
+### 5. Pagamento informando email
+Exatamente como o método anterior, com a diferença que neste caso é possível informar o email para facilitar o preenchimento na hora de enviar o comprovante para o cliente. Caso queira utilizar essa função para realizar outro tipo de pagamento que não o parcelado, basta informar os códigos primários desejados e informar **0** no número de parcelas.
+Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
+
+| Atributo        | Descrição  | Domínio|
+|-----------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------|
+| orderId         | O identificador do pedido a ser pago. | String   |
+| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | Long   |
+| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | String   |
+| secondaryCode         | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | String   |
+| installments | Número de parcelas. | Long   |
+| paymentListener | Callback de pagamento | cielo.sdk.order.payment.PaymentListener |
+
+**Fluxo da transação utilizando o pagamento direto da Cielo LIO**
+
+```orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, installments,  paymentListener);```
+
+Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento com email:
+![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
 
 ---
 
