Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1462,6 +1462,17 @@ Os seguintes campos serão retornados por essa função:
 
 Com os códigos de pagamentos disponíveis para a Cielo LIO do estabelecimento comercial, basta realizar a chamada de Pagamento Direto informando os códigos dos produtos:
 
+``` 
+  PrimaryProduct primaryProduct = paymentTypes.get(0);
+  SecondaryProduct secondaryProduct = primaryProduct.getSecondaryProducts().get(0);
+  
+  String primaryCode = primaryProduct.getCode();
+  String secondaryCode = secondaryProduct.getCode();
+  
+  orderManager.checkoutOrder(orderId, primaryCode, secondaryCode paymentListener);
+```
+
+
 Nessa forma de pagamento é possível enviar qualquer valor a ser pago e a forma de pagamento. Para fazer a chamada é necessário enviar os seguintes parâmetros:
 
 | Atributo        | Descrição  | Domínio|
