Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1263,7 +1263,7 @@ Identificação de acesso. Sua geração ocorre no momento da criação pelo pai
 * Access-Token
 Identificação do token de acesso, que armazena as regras de acesso permitidas ao Client ID. Sua geração ocorre no momento da criação do Client ID pelo painel do desenvolvedor. Seu valor pode ser visualizado clicando em 'detalhes' na coluna 'Access Tokens', dentro do menu 'Desenvolvedor' -> 'Client ID Cadastrados'.
 
-### Utilização
+## Criação e Gerenciamento de Ordens
 
 O fluxo básico para utilização do SDK pode ser dividido em 7 etapas, conforme o diagrama abaixo:
 
@@ -1271,7 +1271,7 @@ O fluxo básico para utilização do SDK pode ser dividido em 7 etapas, conforme
 
 Abaixo, iremos mostrar como realizar cada uma dessas etapas.
 
-#### Criar OrderManager
+### Criar OrderManager
 
 Este método permite iniciar o OrderManager, que é responsável pelas principais operações do Cielo LIO Order Manager SDK. O OrderManager representa a interface com a API REST do Order Manager.
 
@@ -1290,7 +1290,7 @@ O construtor do OrderManager recebe 2 parâmetros:
 
 >**Atenção:** Recomendamos criar/inicializar o OrderManager no aplicativo do parceiro no momento em que for utilizar as funcionalidades, visando otimizar o desempenho do aplicativo
 
-#### Vincular o contexto da aplicação ao SDK
+### Vincular o contexto da aplicação ao SDK
 
 Com o método `bind()`, é possível vincular o contexto da aplicação ao SDK. Este serviço é responsável por gerenciar as funções relacionadas com as ordens da LIO
 
@@ -1326,7 +1326,7 @@ O método Bind recebe dois parâmetros:
 
 Com o OrderManager inicializado e após a execução do método onServiceBound, se torna possível ir para a próxima etapa e criar um pedido (classe Order).
 
-#### Criar um pedido
+### Criar um pedido
 
 A Cielo LIO trabalha com o conceito de Order (pedido). É necessário possuir um pedido para então realizar o(s) pagamento(s).
 
@@ -1336,7 +1336,7 @@ Este método permite criar uma Order (classe Order). Para realizar essa criaçã
 Order order = orderManager.createDraftOrder("REFERÊNCIA_DO_PEDIDO");
 ```
 
-#### Adicionar itens em um pedido
+### Adicionar itens em um pedido
 
 Este método permite que sejam adicionados itens em um pedido.
 
@@ -1357,7 +1357,7 @@ unityOfMeasure = "UNIDADE";
 order.addItem(sku, name, unitPrice, quantity, unityOfMeasure);
 ```
 
-#### Liberar pedido para pagamento
+### Liberar pedido para pagamento
 
 Este método permite atualizar o status de um pedido e liberá-lo para pagamento. O objetivo é utilizar este método depois de adicionar todos os itens no pedido.
 
@@ -1462,16 +1462,15 @@ Os seguintes campos serão retornados por essa função:
 
 Com os códigos de pagamentos disponíveis para a Cielo LIO do estabelecimento comercial, basta realizar a chamada de Pagamento Direto informando os códigos dos produtos:
 
-``` 
-  PrimaryProduct primaryProduct = paymentTypes.get(0);
-  SecondaryProduct secondaryProduct = primaryProduct.getSecondaryProducts().get(0);
-  
-  String primaryCode = primaryProduct.getCode();
-  String secondaryCode = secondaryProduct.getCode();
-  
-  orderManager.checkoutOrder(orderId, primaryCode, secondaryCode paymentListener);
 ```
+PrimaryProduct primaryProduct = paymentTypes.get(0);
+SecondaryProduct secondaryProduct = primaryProduct.getSecondaryProducts().get(0);
 
+String primaryCode = primaryProduct.getCode();
+String secondaryCode = secondaryProduct.getCode();
+
+orderManager.checkoutOrder(orderId, primaryCode, secondaryCode paymentListener);
+```
 
 Nessa forma de pagamento é possível enviar qualquer valor a ser pago e a forma de pagamento. Para fazer a chamada é necessário enviar os seguintes parâmetros:
 
