Updated '_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md' via CloudCannon

--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1458,19 +1458,9 @@ Os seguintes campos serão retornados por essa função:
 | id         |identificador do código no sistema. | Long   |
 | code         | utilizado na função de pagamento. | String   |
 | name         | Nome do método de pagamento para efeitos de exibição. | String   |
-| secondaryProducts         | Listagem de códigos de pagamento secundário. ex.: À Vista, Parcelado, etc. | ArrayList - SecondaryProduct   |
+| secondaryProducts         | Listagem de códigos de pagamento secundário. ex.: À Vista, Parcelado, etc. | `ArrayList<SecondaryProduct>`   |
 
 Com os códigos de pagamentos disponíveis para a Cielo LIO do estabelecimento comercial, basta realizar a chamada de Pagamento Direto informando os códigos dos produtos:
-
-```
-PrimaryProduct primaryProduct = paymentTypes.get(0);
-SecondaryProduct secondaryProduct = primaryProduct.getSecondaryProducts().get(0);
-
-String primaryCode = primaryProduct.getCode();
-String secondaryCode = secondaryProduct.getCode();
-
-orderManager.checkoutOrder(orderId, primaryCode, secondaryCode paymentListener);
-```
 
 Nessa forma de pagamento é possível enviar qualquer valor a ser pago e a forma de pagamento. Para fazer a chamada é necessário enviar os seguintes parâmetros:
 
